--- a/iOS/Swift/20190226.md
+++ b/iOS/Swift/20190226.md
@@ -30,7 +30,7 @@ func dispTextformAlert(_ vc:UIViewController, title:String, message:String, comp
     vc.present(alert, animated: true, completion: nil)
 }
 
-Util.dispTextformAlert(self, title: "認証", message: "パスワードを入力してください", completion: { ( password ) in
+dispTextformAlert(self, title: "認証", message: "パスワードを入力してください", completion: { ( password ) in
     print(password)
 })
 
