--- a/iOS/Swift/20190226.md
+++ b/iOS/Swift/20190226.md
@@ -1,7 +1,7 @@
 ### 20190226 
 
 アラートでパスワードを要求
-```
+```Swift
 func dispTextformAlert(_ vc:UIViewController, title:String, message:String, completion:@escaping ((_ text: String)->Void)={(_ text: String) -> Void in print("OK")}, recallAction: @escaping (()->Void)={() -> Void in print("Cancel")}) -> Void {
     let alert = UIAlertController(title: title, message: message, preferredStyle: .alert)
     let okAction = UIAlertAction(title: "OK", style: .default, handler: {
