--- a/iOS/Swift/20190304.md
+++ b/iOS/Swift/20190304.md
@@ -9,14 +9,13 @@ class ViewController: UIViewController {
     @IBOutlet weak var textField: UITextField!
     // 紐づけに使うKey
     let key = "name"
+    let account = "account"
+    
     
     override func viewDidLoad() {
         super.viewDidLoad()
-        
         let name = getKeyChain(key: key)
-        
         nameLabel.text = name
-        
     }
 
     // 保存
@@ -31,8 +30,8 @@ class ViewController: UIViewController {
         }
         
         let dic: [String: Any] = [kSecClass as String: kSecClassGenericPassword,
-                                  kSecAttrGeneric as String: "key",
-                                  kSecAttrAccount as String: "account",
+                                  kSecAttrGeneric as String: key,
+                                  kSecAttrAccount as String: account,
                                   kSecValueData as String: _data]
         
         var itemAddStatus: OSStatus?
@@ -59,8 +58,8 @@ class ViewController: UIViewController {
     @IBAction func deleteKeyChain(_ sender: Any) {
         // 削除するqueryを設定
         let dic: [String: Any] = [kSecClass as String: kSecClassGenericPassword,
-                                  kSecAttrGeneric as String: "key",
-                                  kSecAttrAccount as String: "account"]
+                                  kSecAttrGeneric as String: key,
+                                  kSecAttrAccount as String: account]
         
         if SecItemDelete(dic as CFDictionary) == errSecSuccess {
             print("削除成功")
@@ -79,7 +78,7 @@ class ViewController: UIViewController {
     func getKeyChain(key: String) -> String? {
         
         let dic: [String: Any] = [kSecClass as String: kSecClassGenericPassword,
-                                  kSecAttrGeneric as String: "key",
+                                  kSecAttrGeneric as String: key,
                                   kSecReturnData as String: kCFBooleanTrue]
         
         var data: AnyObject?
@@ -100,6 +99,6 @@ class ViewController: UIViewController {
             return nil
         }
     }
-
 }
+
 ```
