--- a/iOS/Swift/20190304.md
+++ b/iOS/Swift/20190304.md
@@ -7,31 +7,52 @@ class ViewController: UIViewController {
 
     @IBOutlet weak var nameLabel: UILabel!
     @IBOutlet weak var textField: UITextField!
-    // 紐づけに使うKey
-    let key = "name"
-    let account = "account"
-    
     
     override func viewDidLoad() {
         super.viewDidLoad()
-        let name = getKeyChain(key: key)
-        nameLabel.text = name
+        nameLabel.text = KeyChainManager.name.get()
     }
 
     // 保存
-    @IBAction func saveKeyChain(_ sender: Any) {
+    @IBAction func tappedSaveButton(_ sender: Any) {
+        guard let value = textField.text else { return }
+        KeyChainManager.name.set(value: value)
+    }
+    
+    // 削除
+    @IBAction func tappedDeleteButton(_ sender: Any) {
+        KeyChainManager.name.delete()
+    }
+    
+    // 取得
+    @IBAction func tappedGetButton(_ sender: Any) {
+        nameLabel.text = KeyChainManager.name.get()
+    }
+    
+    
+
+}
+
+```
+
+```Swift
+import Foundation
+
+enum KeyChainManager: String {
+    
+    case name = "name"
+    
+    // 保存
+    func set(value: String) {
         
-        guard let str = textField.text else { return }
-        
-        let data = str.data(using: .utf8)
+        let data = value.data(using: .utf8)
         
         guard let _data = data else {
             return
         }
         
         let dic: [String: Any] = [kSecClass as String: kSecClassGenericPassword,
-                                  kSecAttrGeneric as String: key,
-                                  kSecAttrAccount as String: account,
+                                  kSecAttrGeneric as String: self.rawValue,
                                   kSecValueData as String: _data]
         
         var itemAddStatus: OSStatus?
@@ -55,11 +76,10 @@ class ViewController: UIViewController {
     }
     
     // 削除
-    @IBAction func deleteKeyChain(_ sender: Any) {
+    func delete() {
         // 削除するqueryを設定
         let dic: [String: Any] = [kSecClass as String: kSecClassGenericPassword,
-                                  kSecAttrGeneric as String: key,
-                                  kSecAttrAccount as String: account]
+                                  kSecAttrGeneric as String: self.rawValue]
         
         if SecItemDelete(dic as CFDictionary) == errSecSuccess {
             print("削除成功")
@@ -68,17 +88,11 @@ class ViewController: UIViewController {
         }
     }
     
-    @IBAction func getKeyChain(_ sender: Any) {
-        let name = getKeyChain(key: key)
-        nameLabel.text = name
-    }
-    
-    
     // 取得
-    func getKeyChain(key: String) -> String? {
+    func get() -> String? {
         
         let dic: [String: Any] = [kSecClass as String: kSecClassGenericPassword,
-                                  kSecAttrGeneric as String: key,
+                                  kSecAttrGeneric as String: self.rawValue,
                                   kSecReturnData as String: kCFBooleanTrue]
         
         var data: AnyObject?
