--- a/iOS/Swift/20190306.md
+++ b/iOS/Swift/20190306.md
@@ -8,7 +8,7 @@ Projectファイルの`capabilities`の`Data Protection`を`ON`にする。(`.en
 - `.noFileProtection`  
 データを保護しない  
 - `.completeFileProtectionUntilFirstUserAuthentication`  
-ユーザーが初めてデバイスのロックを解除するまで保護する  
+ユーザーが初めてデバイスのロックを解除するまで保護する(既定値)  
 - `.completeFileProtectionUnlessOpen`  
 ファイルが開いていない状態で、デバイスがロックされている時は保護する  
 - `.completeFileProtection`  
