--- a/iOS/Swift/20190306.md
+++ b/iOS/Swift/20190306.md
@@ -2,7 +2,8 @@
 
 ### 準備
 Projectファイルの`capabilities`の`Data Protection`を`ON`にする。(`.entitlements`ファイルが生成される)  
-(参考: https://help.apple.com/xcode/mac/current/#/dev88ff319e7)
+参考: https://help.apple.com/xcode/mac/current/#/dev88ff319e7
+
 
 ##### データの保護レベル
 - `.noFileProtection`  
@@ -13,6 +14,7 @@ Projectファイルの`capabilities`の`Data Protection`を`ON`にする。(`.en
 ファイルが開いていない状態で、デバイスがロックされている時は保護する  
 - `.completeFileProtection`  
 ファイルの状態に関わらず、デバイスがロックされている時は保護する  
+
 
 ### 実装
 テキストファイルの作成時、または更新時に`WritingOptions`を付与しデータを保護する。
@@ -65,4 +67,17 @@ func appendText(fileURL: URL, text: String) {
     }
 }
 ```
-(参考: https://developer.apple.com/documentation/uikit/core_app/protecting_the_user_s_privacy/encrypting_your_app_s_files)
+参考: https://developer.apple.com/documentation/uikit/core_app/protecting_the_user_s_privacy/encrypting_your_app_s_files
+
+
+### 注意点
+- Simulatorでは動作しない
+- ステータスが反映されるのはアプリの初回インストール時(更新では機能しない為、アンインストールが必要)
+- iExplorerでは暗号化を確認できない
+
+
+
+
+
+
+
