--- a/iOS/Swift/20190306.md
+++ b/iOS/Swift/20190306.md
@@ -25,11 +25,8 @@ func createAndWriteTextFile(fileName: String, text: String) {
     
     // Documentディレクトリのパスを文字列で取得
     guard let documentDirectoryFileURL = URLMaster.Device.documentDirectoryFileURL else { return }
-    
     let fileURLString = documentDirectoryFileURL + fileName
-    
     let fileURL = URL(fileURLWithPath: fileURLString)
-    
     let textData = text.data(using: .utf8)!
     
     do {
@@ -44,24 +41,44 @@ func createAndWriteTextFile(fileName: String, text: String) {
 ```
 
 ```Swift
+// ファイルが保護されているかどうか
+func isProtectedComplete(fileURL: URL) -> Bool {
+    var rsrc: AnyObject?
+    do {
+        // 指定したファイルのリソースプロパティを取得
+        try (fileURL as NSURL).getResourceValue(&rsrc, forKey: .fileProtectionKey)
+        
+    } catch let error as NSError  {
+        print("failed to getResourceValue: \(error)")
+        return false
+    }
+    
+    guard let protectionStatus = rsrc as? URLFileProtection else { return false }
+    
+    return protectionStatus == .complete
+}
+```
+
+```Swift
 // テキストの追記
 func appendText(fileURL: URL, text: String) {
     
     do {
+        // 指定したファイルのリソースプロパティを設定
         try (fileURL as NSURL).setResourceValue(URLFileProtection.complete, forKey: .fileProtectionKey)
+        
     } catch let error as NSError {
-        print("failed to append: \(error)")
+        print("failed to file protection: \(error)")
+        return
     }
+    
+    guard isProtectedComplete(fileURL: fileURL) else { return }
     
     do {
         let fileHandle = try FileHandle(forWritingTo: fileURL)
-
         let stringToWrite = "\n" + text
-
-        // ファイルの最後に追記
         fileHandle.seekToEndOfFile()
         fileHandle.write(stringToWrite.data(using: .utf8)!)
-
     } catch let error as NSError {
         print("failed to append: \(error)")
     }
@@ -73,7 +90,7 @@ func appendText(fileURL: URL, text: String) {
 ### 注意点
 - Simulatorでは動作しない
 - ステータスが反映されるのはアプリの初回インストール時(更新では機能しない為、アンインストールが必要)
-- iExplorerでは暗号化を確認できない
+- iExplorerでは暗号化を確認できない(...たぶん)
 
 
 
