--- a/git/20190314.md
+++ b/git/20190314.md
@@ -23,4 +23,35 @@ OKパターン
 git remote add origin https://{username}:{password}@github.com/user/repository.git
 ```
 
-アクセストークンを設定している場合は`{password}`の代わりにトークンを入力するとうまくいく
+アクセストークンを設定している場合は`{password}`の代わりにトークンを入力する
+
+## 修正手順
+
+##### 登録されているリポジトリの確認
+```
+git remote -v
+```
+```
+origin https://github.com/user/repository.git (fetch) 
+origin https://github.com/user/repository.git (push)
+```
+
+##### originを削除
+```
+git remote rm origin
+```
+
+##### originを再作成
+```
+git remote add origin https://{username}:{password}@github.com/user/repository.git
+```
+
+##### pushする
+```
+git push -u origin master
+```
+
+```
+Branch 'master' set up to track remote branch 'master' from 'origin'.
+```
+となればOK
