--- a/iOS/Swift/20190318.md
+++ b/iOS/Swift/20190318.md
@@ -2,3 +2,11 @@
 
 - installはPodfile.lockをみてインストールする
 - updateはPodfile.lockをみずにインストールする、さらにPodfile.lockを更新する
+
+
+# プロジェクトからCocoaPodsを削除する
+```
+pod deintegrate
+pod clean
+rm Podfile
+```
